# simHit

./: .gitignore  .zenodo.json  CITATION.cff  README.md  ROADMAP.md  package-lock.json  package.json  simhit.sh
.github/workflows/: ci.yml  cleanup-artifacts.yml  firmware-release.yml  release.yml
API/: api.php
app/: package-lock.json  package.json
app/src/: app.css
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: lib.rs  main.rs
app/src-tauri/src/metrics/: allan.rs  capture.rs  flash.rs  mod.rs  platform.rs  sampling.rs
app/src/lib/: acceptance.svelte.ts  allan-inplace.svelte.ts  analysis.svelte.ts  audio.svelte.ts  bias-drift.svelte.ts  bundle.svelte.ts  calibration-policy.svelte.ts  capture.svelte.ts  dialog.svelte.ts  eyeset.svelte.ts  firmware.svelte.ts  flash.svelte.ts  practice.svelte.ts  practiceReport.svelte.ts  report.svelte.ts  scenario.svelte.ts  serial.svelte.ts  settings.svelte.ts  simulator.svelte.ts  storage.ts  synthetic.svelte.ts
app/src/lib/components/: AppDialog.svelte  AudioSettings.svelte  TopBar.svelte  (+10 more)
app/src/routes/: +layout.svelte  +page.svelte
docs/: PLAN-CONFIG-SENSOR.md  roadmap-impulsos-verticales.md
firmware/: DRIVERS_TODO.md  manifest.json
firmware/simhit/: simhit.ino
python_old/software/: EyeAnimation.py  Hit.py  SerialHit.py  TestNumber.py  Transform.py  main.py  requirements.txt  setup.py
python_old/software/qt/: Ui_SimHit .ui
software/: EyeAnimation.py  Hit.py  README.md  SerialHit.py  compile_unix.sh  compile_win.bat  main.py  simhitController.py  ui.py
software/qt/: Ui_SimHit .ui
(+28 files in other folders)
