[package]
name = "simhit"
version = "2026.5.0"
description = "SimHIT — simulador vHIT para entrenamiento"
authors = ["Debaq"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "simhit_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-serialplugin = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
# espflash v3: API de librería para detectar chip ESP y flashear .bin.
# default-features=false desactiva los binarios (esto-flash CLI) y deja solo
# la lib + el feature serialport para descubrir puertos USB.
espflash = { version = "3", default-features = false, features = ["serialport"] }
serialport = "4"
# Descarga de los .bin del manifest (Releases). reqwest con tls=rustls evita
# arrastrar OpenSSL en Windows.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
futures-util = "0.3"
tokio = { version = "1", features = ["fs", "io-util"] }

